[gd_scene load_steps=8 format=3 uid="uid://cfsfwps6dsd7j"]

[ext_resource type="Script" uid="uid://2vc8fm0ou8ic" path="res://scripts/gui/level_gui.gd" id="1_8elk5"]
[ext_resource type="PackedScene" uid="uid://8xsf5j74u2cf" path="res://scenes/gui/bomb_gui.tscn" id="1_uuanb"]
[ext_resource type="Texture2D" uid="uid://dc55hjvuarvqq" path="res://assets/pixle_art/gui/gui_background.png" id="3_6o77t"]
[ext_resource type="Texture2D" uid="uid://daatn6rj1it2l" path="res://assets/pixle_art/gui/bomb_gui_end.png" id="3_nplj0"]
[ext_resource type="Texture2D" uid="uid://212mqtlm5mpm" path="res://assets/pixle_art/gui/level_button.png" id="4_u0pcm"]
[ext_resource type="Texture2D" uid="uid://b6qgjxbqlvl6u" path="res://assets/pixle_art/gui/home_button.png" id="5_5umfk"]
[ext_resource type="Texture2D" uid="uid://bt3bsualusgqv" path="res://assets/pixle_art/gui/restart_button.png" id="5_r4655"]

[node name="LevelGUI" type="Node2D"]
position = Vector2(136, 0)
script = ExtResource("1_8elk5")

[node name="AdjacentGUI" parent="." instance=ExtResource("1_uuanb")]

[node name="DiagonalGUI" parent="." instance=ExtResource("1_uuanb")]
position = Vector2(16, 0)

[node name="FullGUI" parent="." instance=ExtResource("1_uuanb")]
position = Vector2(32, 0)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -4.2245
offset_top = -0.117984
offset_right = -0.224503
offset_bottom = 15.882
texture = ExtResource("3_nplj0")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 48.0
offset_right = 52.0
offset_bottom = 16.0
texture = ExtResource("3_nplj0")

[node name="Node2D" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="Node2D"]
offset_left = -136.0
offset_right = -89.0
offset_bottom = 17.0
texture = ExtResource("3_6o77t")

[node name="HomeButton" type="TextureButton" parent="Node2D"]
offset_left = -136.0
offset_right = -120.0
offset_bottom = 16.0
texture_normal = ExtResource("5_5umfk")

[node name="LevelButton" type="TextureButton" parent="Node2D"]
offset_left = -121.121
offset_right = -105.121
offset_bottom = 16.0
texture_normal = ExtResource("4_u0pcm")

[node name="RestartButton" type="TextureButton" parent="Node2D"]
offset_left = -106.183
offset_right = -90.1827
offset_bottom = 16.0
texture_normal = ExtResource("5_r4655")

[connection signal="pressed" from="Node2D/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Node2D/LevelButton" to="." method="_on_level_button_pressed"]
[connection signal="pressed" from="Node2D/RestartButton" to="." method="_on_restart_button_pressed"]
